=======
CHANGES
=======

0.3 (Unreleased)
================

- Allow to add `str` as error in `Form.validate` method

- Better tanslations for `Invalid` messages

- Changed arguments order for `Invalid` class contrustor 

- Added sub errors support to `Invalid` class

- Added `extract` parameter to `Button` class, if extract is set then action
  extract values from form, adds errors to message and pass data to handler

- Added `pform.button2` decorator, `extract` parameter is true

- Do not update widget's custom tmpl_widget


0.2 (11-13-2012)
================

- Fixed submit button template

- Allow to return http response from form update or action handler

- Added support for `player.layout()`


0.1 (11-07-2012)
================

- Initial release